update chekeditor commit

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 GOOGLE_API_KEY=AIzaSyC0ZNNgnaokxprH5jBnxwdTUZjWS-1iegw
 # FAISS_INDEX_FILE=F:\my projects\medical_ai\faiss_index.index
+
+
+CLOUDINARY_CLOUD_NAME=dzntzc2pj
+CLOUDINARY_API_KEY=851731993315788
+CLOUDINARY_API_SECRET=D9VSTdBPdnPQygGjKLa54AHoT8o
