adding duplicate ques and image field

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 GOOGLE_API_KEY=AIzaSyC0ZNNgnaokxprH5jBnxwdTUZjWS-1iegw
+# GOOGLE_API_KEY=AIzaSyBYx-g1NRbzOFyvaBo-hNHBpSDqMeRHta8
 # FAISS_INDEX_FILE=F:\my projects\medical_ai\faiss_index.index
 
 
